===================================
VDR Plugin 'satip' Revision History
===================================

2014-03-08: Version 0.0.1

- Initial revision.
- Added German translation (Thanks to Frank Neumann).

2014-03-15: Version 0.1.0

- Switched to the standard S/T/C source identifiers.
- Added a new operation mode setup parameter.
- Added new SVDRP commands.

2014-03-16: Version 0.1.1

- Changed code to utilize a proper XML library.
- Refactored the session code.
- Fixed EIT scan functionality.
- Updated for vdr-2.1.6.

2014-03-28: Version 0.2.0

- Added support for cDevice::Ready().
- Fixed pid leaking while disabling section filters.
- Fixed keepalive heartbeat.

2014-04-01: Version 0.2.1

- Changed implementation to report about RTP packet
  errors on 5 minutes interval only.
- Added a check to write new sections only if there
  is no data in the read socket.
- Fixed keepalive heartbeat again.

2014-04-05: Version 0.2.2

- Fixed the default keepalive interval.
- Refactored the section filtering.
- Added Catalan translation (Thanks to Gabriel Bonich).

2014-04-12: Version 0.2.3

- Added Spanish translation (Thanks to Gabriel Bonich).